Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1084

acvo-c: reference counting error in file_writer and file_reader code

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.6.3, 1.7.0
    • 1.7.0
    • c
    • None

    Description

      Missed incref/decref calls for writer_schema in file_writer_create() and avro_file_reader_get_writer_schema() functions. Crash dump example in the attached code.

      Attachments

        1. AVRO-1084.patch
          0.8 kB
          Pugachev Maxim
        2. example.c
          1 kB
          Pugachev Maxim

        Activity

          People

            Unassigned Unassigned
            mpugachev Pugachev Maxim
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: