AVRO-1084. C: Fix reference counting in file_reader and file_writer

Contributed by Pugachev Maxim.


git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1340721 13f79535-47bb-0310-9956-ffa450edef68